--- a/r/index.html
+++ b/r/index.html
@@ -134,7 +134,7 @@ library(igraph)
 
         <div class="page-header">
           <h1><span id="docs" class="anchor">&nbsp;</span>Documentation
-          <small>&ndash; for version {% include igraph-version %}</small></h1>
+          <small>&ndash; for version {% include igraph-rversion %}</small></h1>
         </div>
 
         <h3><span id="rmanual" class="anchor">&nbsp;</span>R manual pages</h3>
@@ -176,7 +176,7 @@ library(igraph)
         <h3><span id="rdown" class="anchor">&nbsp;</span>
 	  Latest stable version
 	  &ndash; {% include igraph-rversion %}
-	  (aka {% include igraph-version %})</h3>
+	  (aka {% include igraph-rversion %})</h3>
         <p>
           <small> Note: the simplest way to install the igraph R
             package is typing <code>install.packages("igraph")</code>
