--- a/c/index.html
+++ b/c/index.html
@@ -158,7 +158,7 @@ extramenu: <li><a href="/c"><i class="icon-c"></i> Get started</a></li>
 
         <div class="page-header">
           <h1><span id="docs" class="anchor">&nbsp;</span>Documentation
-          <small>&ndash; for version {% include igraph-version %}</small></h1>
+          <small>&ndash; for version {% include igraph-cversion %}</small></h1>
         </div>
 
         <h3><span id="cmanual" class="anchor">&nbsp;</span>
@@ -204,13 +204,13 @@ extramenu: <li><a href="/c"><i class="icon-c"></i> Get started</a></li>
         </div>
 
         <h3><span id="cdown" class="anchor">&nbsp;</span>Current release
-	  &ndash; version {% include igraph-version %}</h3>
+	  &ndash; version {% include igraph-cversion %}</h3>
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-file-text"></i>
-              <a href="/nightly/get/c/igraph-{% include igraph-version %}.tar.gz">Source code</a></li>
+              <a href="/nightly/get/c/igraph-{% include igraph-cversion %}.tar.gz">Source code</a></li>
             <li><i class="icon-li icon-windows"></i>
-              <a href="/nightly/get/msvc/igraph-{% include igraph-version %}-msvc.zip">Source code for Microsoft Visual
+              <a href="/nightly/get/msvc/igraph-{% include igraph-cversion %}-msvc.zip">Source code for Microsoft Visual
               Studio</a></li>
           </ul>
         </p>
