--- a/python/index.html
+++ b/python/index.html
@@ -1,4 +1,4 @@
----
+`---
 layout: default
 mainheader: Get started with python-igraph
 lead: Install and start using python-igraph
@@ -147,7 +147,7 @@ $ pip install python-igraph
 
         <div class="page-header">
           <h1><span id="docs" class="anchor">&nbsp;</span>Documentation
-          <small>&ndash; for version {% include igraph-version %}</small></h1>
+          <small>&ndash; for version {% include igraph-pyversion %}</small></h1>
         </div>
 
         <h3><span id="pymanual" class="anchor">&nbsp;</span>Python manual</h3>
@@ -192,21 +192,21 @@ $ pip install python-igraph
 
         <h3><span id="pydown" class="anchor">&nbsp;</span>
           Current release
-	  &ndash; version {% include igraph-version %}</h3>
+	  &ndash; version {% include igraph-pyversion %}</h3>
         <p>
           <ul class="icons-ul list-unstyled">
             <!-- <li><i class="icon-li icon-windows"></i> -->
-            <!--   <a href="/nightly/python/python-igraph-{% include igraph-version %}.win32-py3.2.msi">Windows installer for Python 3.2</a></li> -->
+            <!--   <a href="/nightly/python/python-igraph-{% include igraph-pyversion %}.win32-py3.2.msi">Windows installer for Python 3.2</a></li> -->
             <!-- <li><i class="icon-li icon-windows"></i> -->
-            <!--   <a href="/nightly/python/python-igraph-{% include igraph-version %}.win32-py2.7.msi">Windows installer for Python 2.7</a></li> -->
+            <!--   <a href="/nightly/python/python-igraph-{% include igraph-pyversion %}.win32-py2.7.msi">Windows installer for Python 2.7</a></li> -->
             <!-- <li><i class="icon-li icon-windows"></i> -->
-            <!--   <a href="/nightly/python/python-igraph-{% include igraph-version %}.win32-py2.6.msi">Windows installer for Python 2.6</a></li> -->
+            <!--   <a href="/nightly/python/python-igraph-{% include igraph-pyversion %}.win32-py2.6.msi">Windows installer for Python 2.6</a></li> -->
             <li><i class="icon-li icon-apple"></i>
-              <a href="/nightly/get/python-osx/python_igraph-{% include igraph-version %}-py2.7-macosx10.8.dmg">OS X Mountain Lion (and above) installer for Python 2.7</a></li>
+              <a href="/nightly/get/python-osx/python_igraph-{% include igraph-pyversion %}-py2.7-macosx10.8.dmg">OS X Mountain Lion (and above) installer for Python 2.7</a></li>
             <!-- <li><i class="icon-li icon-apple"></i> -->
-            <!--   <a href="/nightly/python/python_igraph-{% include igraph-version %}-py2.6-macosx10.8.dmg">OS X Lion installer (Python 2.6)</a></li> -->
+            <!--   <a href="/nightly/python/python_igraph-{% include igraph-pyversion %}-py2.6-macosx10.8.dmg">OS X Lion installer (Python 2.6)</a></li> -->
             <li><i class="icon-li icon-file-text"></i>
-              <a href="/nightly/get/python/python-igraph-{% include igraph-version %}.tar.gz">Source code</a></li>
+              <a href="/nightly/get/python/python-igraph-{% include igraph-pyversion %}.tar.gz">Source code</a></li>
             <li><i class="icon-li icon-external-link"></i>
               <a href="https://pypi.python.org/pypi/python-igraph">Python Package Index page</a></li>
           </ul>
