Fix links to github repos

--- a/python/index.html
+++ b/python/index.html
@@ -1,4 +1,4 @@
-`---
+---
 layout: default
 mainheader: Get started with python-igraph
 lead: Install and start using python-igraph
@@ -223,7 +223,7 @@ $ pip install python-igraph
           Development version</h3>
         <p>
           Clone (or fork) the <code>develop</code> branch from the
-          <a href="https://github.com/igraph/igraph">igraph git
+          <a href="https://github.com/igraph/python-igraph">python-igraph git
             reposity on github.</a>
         </p>
 
@@ -262,7 +262,7 @@ $ pip install python-igraph
           Report bugs</h3>
 
         <p>Report bugs or suggest new features or algorithms in the 
-          <a href="https://github.com/igraph/igraph/issues">
+          <a href="https://github.com/igraph/python-igraph/issues">
           github issue tracker</a>.
         </p>
         
@@ -277,7 +277,7 @@ $ pip install python-igraph
         <h3><span id="contributecode" class="anchor">&nbsp;</span>
           Contribute code</h3>
           
-        <p>Send a pull request on <a href="https://github.com/igraph/igraph">
+        <p>Send a pull request on <a href="https://github.com/igraph/python-igraph">
                 github.</a> Please note that igraph can contain only
           code that is compatible with its GPL license.
         </p>
