--- a/r/index.html
+++ b/r/index.html
@@ -203,8 +203,8 @@ library(igraph)
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
         <p>
-          Clone (or fork) the <code>develop</code> branch from the
-          <a href="https://github.com/igraph/igraph">igraph git
+          Clone (or fork) the <code>dev</code> branch from the
+          <a href="https://github.com/igraph/rigraph">rigraph git
             reposity on github.</a>
         </p>
 
@@ -243,7 +243,7 @@ library(igraph)
           Report bugs</h3>
 
         <p>Report bugs or suggest new features or algorithms in the 
-          <a href="https://github.com/igraph/igraph/issues">
+          <a href="https://github.com/igraph/rigraph/issues">
           github issue tracker</a>.
         </p>
         
@@ -258,7 +258,7 @@ library(igraph)
         <h3><span id="contributecode" class="anchor">&nbsp;</span>
           Contribute code</h3>
           
-        <p>Send a pull request on <a href="https://github.com/igraph/igraph">
+        <p>Send a pull request on <a href="https://github.com/igraph/rigraph">
                 github.</a> Please note that igraph can contain only
           code that is compatible with its GPL license.
         </p>
