Put a NEWS section on the main page, for common stuff

--- a/news.html
+++ b/news.html
@@ -1,8 +1,15 @@
 ---
-layout: cnewstemp
+layout: newstemp
+lang: all
+mainheader: News
+lead: What is happening with igraph
+categories:
+- c
+- r
+- python
 ---
 
-{% for post in site.categories.c %}
+{% for post in site.posts %}
 
   <div class="page-header">
     <h1><span id="{{ post.id }}" class="anchor">&nbsp;</span>
@@ -12,5 +19,5 @@ layout: cnewstemp
   {{ post.content | extract_excerpt: post.url }}
 
   <hr class="news-separator">
-
+  
 {% endfor %}
