Simpler navbar, simpler news: all together in one list

--- a/news.html
+++ b/news.html
@@ -1,12 +1,5 @@
 ---
-layout: newstemp
-lang: all
-mainheader: News
-lead: What is happening with igraph
-categories:
-- c
-- r
-- python
+layout: post
 ---
 
 {% for post in site.posts %}
