Links to C/R contribution guidelines

--- a/c/index.html
+++ b/c/index.html
@@ -281,7 +281,9 @@ lead: Install and start using the igraph library
           
         <p>Send a pull request on <a href="https://github.com/igraph/igraph">
                 github.</a> Please note that igraph can contain only
-          code that is compatible with its GPL license.
+          code that is compatible with its GPL license. See
+	  <a href="https://github.com/igraph/igraph/blob/master/CONTRIBUTING.md">
+	    our guide</a> on contributions to the igraph C library at Gtihub.
         </p>
 
       </div>
