--- a/r/index.html
+++ b/r/index.html
@@ -260,7 +260,9 @@ library(igraph)
           
         <p>Send a pull request on <a href="https://github.com/igraph/rigraph">
                 github.</a> Please note that igraph can contain only
-          code that is compatible with its GPL license.
+          code that is compatible with its GPL license. See
+	  <a href="https://github.com/igraph/rigraph/blob/dev/CONTRIBUTING.md">
+	    our guide</a> on contributions to the igraph R package at Github.
         </p>
 
       </div>
