Fix capitalization of "GitHub".

--- a/r/index.html
+++ b/r/index.html
@@ -254,7 +254,7 @@ library(igraph)
                 github.</a> Please note that igraph can contain only
           code that is compatible with its GPL license. See
 	  <a href="https://github.com/igraph/rigraph/blob/dev/CONTRIBUTING.md">
-	    our guide</a> on contributions to the igraph R package at Github.
+	    our guide</a> on contributions to the igraph R package at GitHub.
         </p>
 
       </div>
