updated Windows installer links on homepage

--- a/python/index.html
+++ b/python/index.html
@@ -102,9 +102,8 @@ $ pip install python-igraph
         <code>pkg-config</code>, <code>pip</code> will attempt to
         download a matching version of the C core and compile it together
         with the Python interface. Note that this will not work on Windows;
-        you are advised to download and run one of the MSI installers that
-        we provide on the <a href="http://pypi.python.org/pypi/python-igraph">Python
-        Package Index</a>.
+        you are advised to download and run one of the Python wheels that
+        Christoph Gohlke provides on <a href="https://www.lfd.uci.edu/~gohlke/pythonlibs/#python-igraph">his website</a>.
         </p>
 
         <h3><span id="pyinstallosx" class="anchor">&nbsp;</span>
@@ -122,14 +121,13 @@ $ pip install python-igraph
           Installation on Windows</h3>
         <p>
           The preferred way to install the Python interface on Windows is to
-          download one of the MSI installers from the
-          <a href="http://pypi.python.org/python-igraph">Python Package Index</a>.
-          If you do not find an installer that is suitable for your specific
-          version of Python, you can also try one of the unofficial installers built by
-          <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/">Christoph Gohlke</a>.
-          (Thanks Christoph!). Note that the automatic compilation of the C core
-          when running <code>pip install python-igraph</code> will <em>not</em>
-          work on Windows!
+          download one of the unofficial installers built by
+          <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#python-igraph">Christoph Gohlke</a>.
+          (Thanks Christoph!). We do not provide "official" installers for
+          Windows as we don't use Windows ourselves and we would not be able
+          to test them before release. Note that the automatic compilation of
+          the C core when running <code>pip install python-igraph</code> will
+          <em>not</em> work on Windows!
         </p>
 
         <h3><span id="pydoc1" class="anchor">&nbsp;</span>Tutorials</h3>
