minor fixes in the C and R index pages

--- a/c/index.html
+++ b/c/index.html
@@ -117,8 +117,8 @@ lead: Install and start using the igraph library
           Installation on Mac OS X</h3>
         <p>
           You can use the regular Unix way (as above), or
-          <a href="http://brew.sh/">Homebrew</a>, the
-          <code>homebrew/science/igraph</code> formula.
+          if you have <a href="http://brew.sh/">Homebrew</a>, then
+          simply install the <code>igraph</code> formula.
         </p>
 
         <h3><span id="cinstallcygwin" class="anchor">&nbsp;</span>
@@ -178,7 +178,7 @@ lead: Install and start using the igraph library
           The original XML DocBook format of the C Reference Manual can be
           obtained by downloading the latest igraph development
           version from <a href="https://github.com/igraph/igraph">
-          github</a>.
+          GitHub</a>.
         </p>
 
         <!-- <h3><span id="screenshots" class="anchor">&nbsp;</span> -->
@@ -216,9 +216,9 @@ lead: Install and start using the igraph library
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
         <p>
-          Clone (or fork) the <code>develop</code> branch from the
+          Clone (or fork) the <code>master</code> branch from the
           <a href="https://github.com/igraph/igraph">igraph git
-            reposity on github.</a>
+            reposity on GitHub.</a>
         </p>
 
         <div class="page-header">
@@ -257,7 +257,7 @@ lead: Install and start using the igraph library
 
         <p>Report bugs or suggest new features or algorithms in the 
           <a href="https://github.com/igraph/igraph/issues">
-          github issue tracker</a>.
+          GitHub issue tracker</a>.
         </p>
         
         <!-- <h3><span id="contributewiki" class="anchor">&nbsp;</span> -->
@@ -272,10 +272,10 @@ lead: Install and start using the igraph library
           Contribute code</h3>
           
         <p>Send a pull request on <a href="https://github.com/igraph/igraph">
-                github.</a> Please note that igraph can contain only
+                GitHub.</a> Please note that igraph can contain only
           code that is compatible with its GPL license. See
 	  <a href="https://github.com/igraph/igraph/blob/master/CONTRIBUTING.md">
-	    our guide</a> on contributions to the igraph C library at Gtihub.
+	    our guide</a> on contributions to the igraph C library at GitHub.
         </p>
 
       </div>
