minor fixes in the Python and R index pages

--- a/r/index.html
+++ b/r/index.html
@@ -117,9 +117,8 @@ library(igraph)
 
         <p>
           <ul>
-            <li>Manual pages <a href="/r/doc/aaa-igraph-package.html">
-              <code class="rman">igraph</code></a> and
-              {% include rman p="graph.structure" %} are good places
+            <li>The <a href="/r/doc/aaa-igraph-package.html">
+              <code class="rman">igraph</code></a> manual page is a good place
               to start.</li>
 <!--             <li>Some screenshots and examples are -->
 <!--               <a href="">here.</a></li>           -->
@@ -184,20 +183,20 @@ library(igraph)
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-windows"></i>
-              <a href="/nightly/get/r-win/igraph_{% include igraph-rversion %}.zip">Windows binary package</a></li>
+              <a href="https://cran.r-project.org/bin/windows/contrib/3.6/igraph_{% include igraph-rversion %}.zip">Windows binary package</a></li>
             <li><i class="icon-li icon-apple"></i>
-              <a href="/nightly/get/r-osx/igraph_{% include igraph-rversion %}.tgz">Mac OS X universal binary package</a></li>
+              <a href="https://cran.r-project.org/bin/macosx/el-capitan/contrib/3.6/igraph_{% include igraph-rversion %}.tgz">Mac OS X universal binary package</a></li>
             <li><i class="icon-li icon-file-text"></i>
-              <a href="/nightly/get/r/igraph_{% include igraph-rversion %}.tar.gz">Source package</a></li>
+			  <a href="https://cran.r-project.org/src/contrib/igraph_{% include igraph-rversion %}.tar.gz">Source package</a></li>
           </ul>
         </p>
 
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
         <p>
-          Clone (or fork) the <code>dev</code> branch from the
+		  Clone (or fork) the <code>dev</code> or <code>cran</code> branch from the
           <a href="https://github.com/igraph/rigraph">rigraph git
-            reposity on github.</a>
+            repository on github.</a>
         </p>
 
         <div class="page-header">
@@ -236,7 +235,7 @@ library(igraph)
 
         <p>Report bugs or suggest new features or algorithms in the 
           <a href="https://github.com/igraph/rigraph/issues">
-          github issue tracker</a>.
+          GitHub issue tracker</a>.
         </p>
         
         <!-- <h3><span id="contributewiki" class="anchor">&nbsp;</span> -->
@@ -251,7 +250,7 @@ library(igraph)
           Contribute code</h3>
           
         <p>Send a pull request on <a href="https://github.com/igraph/rigraph">
-                github.</a> Please note that igraph can contain only
+                GitHub.</a> Please note that igraph can contain only
           code that is compatible with its GPL license. See
 	  <a href="https://github.com/igraph/rigraph/blob/dev/CONTRIBUTING.md">
 	    our guide</a> on contributions to the igraph R package at GitHub.
