--- a/python/index.html
+++ b/python/index.html
@@ -85,7 +85,7 @@ extramenu: <li><a href="/python"><i class="icon-python"></i> Get started</a></li
         <h3><span id="pyinstall" class="anchor">&nbsp;</span>
            Installation</h3>
         <p>
-          igraph is on the <a href="http://pypi.python.org/pypi/python-igraph">Python
+          igraph is on the <a href="https://pypi.org/project/python-igraph">Python
           Package Index</a> so it can be installed using <code>pip</code> or
           <code>easy_install</code>:
         </p>
@@ -111,7 +111,7 @@ $ pip install python-igraph
         <p>
         Instead of letting <code>pip</code> compile the C core for you,
         you can install <a href="http://brew.sh/">Homebrew</a> and
-        the <code>homebrew/science/igraph</code> formula. This will ensure
+        the <code>igraph</code> formula. This will ensure
         that the C core is found by <code>pip</code> so running
         <code>pip install python-igraph</code> will compile the Python interface
         only and link it to the C core.
@@ -134,9 +134,9 @@ $ pip install python-igraph
 
         <p>
           <ul>
-            <li>A short tutorial is provided on <a href="http://igraph.org/python/doc/tutorial/tutorial.html">this page</a>.</li>
-            <li>The documentation of the <a href="http://igraph.org/python/doc/igraph.Graph-class.html">Graph</a> and
-            <a href="http://igraph.org/python/doc/igraph.GraphBase-class.html">GraphBase</a>
+            <li>A short tutorial is provided on <a href="/python/doc/tutorial/tutorial.html">this page</a>.</li>
+            <li>The documentation of the <a href="/python/doc/igraph.Graph-class.html">Graph</a> and
+            <a href="/python/doc/igraph.GraphBase-class.html">GraphBase</a>
             classes provide a good overview of most of the functionality in the
             Python interface.</li>
           </ul>
@@ -192,29 +192,17 @@ $ pip install python-igraph
 	  &ndash; version {% include igraph-pyversion %}</h3>
         <p>
           <ul class="icons-ul list-unstyled">
-            <!-- <li><i class="icon-li icon-windows"></i> -->
-            <!--   <a href="/nightly/python/python-igraph-{% include igraph-pyversion %}.win32-py3.2.msi">Windows installer for Python 3.2</a></li> -->
-            <!-- <li><i class="icon-li icon-windows"></i> -->
-            <!--   <a href="/nightly/python/python-igraph-{% include igraph-pyversion %}.win32-py2.7.msi">Windows installer for Python 2.7</a></li> -->
-            <!-- <li><i class="icon-li icon-windows"></i> -->
-            <!--   <a href="/nightly/python/python-igraph-{% include igraph-pyversion %}.win32-py2.6.msi">Windows installer for Python 2.6</a></li> -->
-            <li><i class="icon-li icon-apple"></i>
-              <a href="/nightly/get/python-osx/python_igraph-{% include igraph-pyversion %}-py2.7-macosx10.8.dmg">OS X Mountain Lion (and above) installer for Python 2.7</a></li>
-            <!-- <li><i class="icon-li icon-apple"></i> -->
-            <!--   <a href="/nightly/python/python_igraph-{% include igraph-pyversion %}-py2.6-macosx10.8.dmg">OS X Lion installer (Python 2.6)</a></li> -->
-            <li><i class="icon-li icon-file-text"></i>
-              <a href="/nightly/get/python/python-igraph-{% include igraph-pyversion %}.tar.gz">Source code</a></li>
             <li><i class="icon-li icon-external-link"></i>
-              <a href="https://pypi.python.org/pypi/python-igraph">Python Package Index page</a></li>
+              <a href="https://pypi.org/project/python-igraph">Python Package Index page</a></li>
           </ul>
         </p>
 
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
         <p>
-          Clone (or fork) the <code>develop</code> branch from the
+          Clone (or fork) the <code>master</code> branch from the
           <a href="https://github.com/igraph/python-igraph">python-igraph git
-            reposity on github.</a>
+            repository on GitHub.</a>
         </p>
 
         <div class="page-header">
@@ -253,7 +241,7 @@ $ pip install python-igraph
 
         <p>Report bugs or suggest new features or algorithms in the 
           <a href="https://github.com/igraph/python-igraph/issues">
-          github issue tracker</a>.
+          GitHub issue tracker</a>.
         </p>
         
         <!-- <h3><span id="contributewiki" class="anchor">&nbsp;</span> -->
@@ -268,7 +256,7 @@ $ pip install python-igraph
           Contribute code</h3>
           
         <p>Send a pull request on <a href="https://github.com/igraph/python-igraph">
-                github.</a> Please note that igraph can contain only
+                GitHub.</a> Please note that igraph can contain only
           code that is compatible with its GPL license.
         </p>
 
