restyling homepage for 0.8 release; docs/ folder not regenerated yet

--- a/c/index.html
+++ b/c/index.html
@@ -4,67 +4,58 @@ mainheader: Get started with the igraph library
 lead: Install and start using the igraph library
 ---
 
-<div class="container bs-docs-container">
+<div class="container">
 
   <div class="row">
     <div class="col-md-3">
-      <div class="bs-sidebar hidden-print" role="complementary" 
-           data-spy="affix">
+      <nav class="bs-sidebar affix hidden-print" role="complementary">
         <ul class="nav bs-sidenav">
-          
-          <li><a href="#startc"><i class="icon-fixed-width icon-c"></i> 
-	      Get started</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#startc">Get started</a>
             <ul class="nav">
-              <li><a href="#creq">Requirements</a></li>
-              <li><a href="#cinstall">Installation</a></li>
-              <li><a href="#cinstallosx">Installation on Mac OS X</a></li>
-              <li><a href="#cinstallcygwin">Installation on Windows under
+              <li class="nav-item"><a class="nav-link" href="#creq">Requirements</a></li>
+              <li class="nav-item"><a class="nav-link" href="#cinstall">Installation</a></li>
+              <li class="nav-item"><a class="nav-link" href="#cinstallosx">Installation on Mac OS X</a></li>
+              <li class="nav-item"><a class="nav-link" href="#cinstallcygwin">Installation on Windows under
                 Cygwin</a></li>
-              <li><a href="#cinstallmsvc">Installation using Microsoft
+              <li class="nav-item"><a class="nav-link" href="#cinstallmsvc">Installation using Microsoft
                 Visual C++<a></li>
-              <li><a href="#ctut">Tutorials</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#docs"><i class="icon-fixed-width icon-book"></i>
-	      Documentation</a>
-            <ul class="nav">
-              <li><a href="#cmanual">C reference manual</a></li>
-<!--               <li><a href="#screenshots">Screenshots and -->
-<!--                 examples</a></li>                        -->
-<!--               <li><a href="#wiki">Wiki</a></li>          -->
+              <li class="nav-item"><a class="nav-link" href="#ctut">Tutorials</a></li>
             </ul>
           </li>
 
-          <li><a href="#downloads">
-	      <i class="icon-fixed-width icon-download"></i> Downloads</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#docs">Documentation</a>
             <ul class="nav">
-              <li><a href="#cdown">Current release</a></li>
-              <li><a href="#devdown">Development version</a></li>
+              <li class="nav-item"><a class="nav-link" href="#cmanual">C reference manual</a></li>
             </ul>
           </li>
 
-          <li><a href="#help">
-	      <i class="icon-fixed-width icon-question-sign"></i> 
-	      Get help</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#downloads">Downloads</a>
             <ul class="nav">
-              <li><a href="#list">Mailing list</a></li>
-              <li><a href="#so">Stack Overflow</a></li>
+              <li class="nav-item"><a class="nav-link" href="#cdown">Current release</a></li>
+              <li class="nav-item"><a class="nav-link" href="#devdown">Development version</a></li>
             </ul>
           </li>
 
-          <li><a href="#contribute">
-	      <i class="icon-fixed-width icon-plus-sign-alt"></i>
-	      Contribute</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#help">Get help</a>
             <ul class="nav">
-              <li><a href="#contributebugs">Report bugs</a></li>
-              <!-- <li><a href="#contributewiki">Improve the Wiki</a></li> -->
-              <li><a href="#contributecode">Contribute code</a></li>
+              <li class="nav-item"><a class="nav-link" href="#list">Mailing list</a></li>
+              <li class="nav-item"><a class="nav-link" href="#so">Stack Overflow</a></li>
             </ul>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="#contribute">Contribute</a>
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#contributebugs">Report bugs</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contributecode">Contribute code</a></li>
+            </ul>
+          </li>
         </ul>
-      </div>
+      </nav>
     </div>
 
     <div class="col-md-8">
@@ -218,7 +209,7 @@ lead: Install and start using the igraph library
         <p>
           Clone (or fork) the <code>master</code> branch from the
           <a href="https://github.com/igraph/igraph">igraph git
-            reposity on GitHub.</a>
+            repository on GitHub.</a>
         </p>
 
         <div class="page-header">
