--- a/python/index.html
+++ b/python/index.html
@@ -5,63 +5,55 @@ lead: Install and start using python-igraph
 extramenu: <li><a href="/python"><i class="icon-python"></i> Get started</a></li>
 ---
 
-<div class="container bs-docs-container">
+<div class="container">
 
   <div class="row">
     <div class="col-md-3">
-      <div class="bs-sidebar hidden-print" role="complementary" 
-           data-spy="affix">
+      <nav id="bs-sidebar" class="bs-sidebar affix hidden-print" role="complementary">
         <ul class="nav bs-sidenav">
-          
-          <li><a href="#startpy"><i class="icon-fixed-width icon-python"></i> 
-	      Get started</a>
-	    <ul class="nav">
-	      <li><a href="#pyreq">Requirements</a></li>
-	      <li><a href="#pyinstall">Installation</a></li>
-	      <li><a href="#pyinstallosx">Installation on Mac OS X</a></li>
-	      <li><a href="#pyinstallwin">Installation on Windows</a></li>
-	      <li><a href="#pydoc1">Tutorials</a></li>
-	    </ul>
-	  </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#startpy"><i class="fa fa-fw icon-python"></i> Get started</a>
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#pyreq">Requirements</a></li>
+              <li class="nav-item"><a class="nav-link" href="#pyinstall">Installation</a></li>
+              <li class="nav-item"><a class="nav-link" href="#pyinstallosx">Installation on Mac OS X</a></li>
+              <li class="nav-item"><a class="nav-link" href="#pyinstallwin">Installation on Windows</a></li>
+              <li class="nav-item"><a class="nav-link" href="#pydoc1">Tutorials</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#docs"><i class="fa fa-fw fa-book"></i> Documentation</a>
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#pymanual">Python manual</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#downloads"><i class="fa fa-fw fa-download"></i> Downloads</a>
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#pydown">Current release</a></li>
+              <li class="nav-item"><a class="nav-link" href="#devdown">Development version</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#help"><i class="fa fa-fw fa-question"></i> Get help</a>
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#list">Mailing list</a></li>
+              <li class="nav-item"><a class="nav-link" href="#so">Stack Overflow</a></li>
+            </ul>
+          </li>
+
           <li>
-            <a href="#docs"><i class="icon-fixed-width icon-book"></i> 
-	      Documentation</a>
-            <ul class="nav">
-              <li><a href="#pymanual">Python manual</a></li>
-<!--               <li><a href="#screenshots">Screenshots and -->
-<!--                 examples</a></li>                        -->
-<!--               <li><a href="#wiki">Wiki</a></li>          -->
-            </ul>
-          </li>
-
-          <li><a href="#downloads">
-	      <i class="icon-fixed-width icon-download"></i> Downloads</a>
-            <ul class="nav">
-              <li><a href="#pydown">Current release</a></li>
-              <li><a href="#devdown">Development version</a></li>
-            </ul>
-          </li>
-
-          <li><a href="#help">
-	      <i class="icon-fixed-width icon-question-sign"></i> Get help</a>
-            <ul class="nav">
-              <li><a href="#list">Mailing list</a></li>
-              <li><a href="#so">Stack Overflow</a></li>
-            </ul>
-          </li>
-
-          <li><a href="#contribute">
-	      <i class="icon-fixed-width icon-plus-sign-alt"></i> 
-	      Contribute</a>
+            <a href="#contribute"><i class="fa fa-fw fa-plus"></i> Contribute</a>
             <ul class="nav">
               <li><a href="#contributebugs">Report bugs</a></li>
-              <!-- <li><a href="#contributewiki">Improve the Wiki</a></li> -->
               <li><a href="#contributecode">Contribute code</a></li>
             </ul>
           </li>
-
         </ul>
-      </div>
+      </nav>
     </div>
 
     <div class="col-md-8">
@@ -189,7 +181,7 @@ $ pip install python-igraph
 
         <h3><span id="pydown" class="anchor">&nbsp;</span>
           Current release
-	  &ndash; version {% include igraph-pyversion %}</h3>
+      &ndash; version {% include igraph-pyversion %}</h3>
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-external-link"></i>
