--- a/r/index.html
+++ b/r/index.html
@@ -4,63 +4,53 @@ mainheader: Get started with R igraph
 lead: Install and start using the igraph R package
 ---
 
-<div class="container bs-docs-container">
-
+<div class="container">
   <div class="row">
     <div class="col-md-3">
-      <div class="bs-sidebar hidden-print" role="complementary" 
-           data-spy="affix">
+      <nav id="bs-sidebar" class="bs-sidebar hidden-print affix" role="complementary"> 
         <ul class="nav bs-sidenav">
-
-          <li><a href="#startr"><i class="icon-fixed-width icon-rlogo"></i> 
-	      Get started</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#startr"><i class="fa fa-fw icon-rlogo"></i> Get started</a>
             <ul class="nav">
-              <li><a href="#rinstall">Installation</a></li>
-              <li><a href="#rreq">Requirements</a></li>
-              <li><a href="#rreqopt">Optional requirements</a></li>
-              <li><a href="#rdoc1">Tutorials</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#docs"><i class="icon-fixed-width icon-book"></i> 
-	      Documentation</a>
-            <ul class="nav">
-              <li><a href="#rmanual">R manual pages</a></li>
-<!--               <li><a href="#screenshots">Screenshots and -->
-<!--                 examples</a></li>                        -->
-<!--               <li><a href="#wiki">Wiki</a></li>          -->
+              <li class="nav-item"><a class="nav-link" href="#rinstall">Installation</a></li>
+              <li class="nav-item"><a class="nav-link" href="#rreq">Requirements</a></li>
+              <li class="nav-item"><a class="nav-link" href="#rreqopt">Optional requirements</a></li>
+              <li class="nav-item"><a class="nav-link" href="#rdoc1">Tutorials</a></li>
             </ul>
           </li>
 
-          <li><a href="#downloads">
-	      <i class="icon-fixed-width icon-download"></i> Downloads</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#docs"><i class="fa fa-fw fa-book"></i> Documentation</a>
             <ul class="nav">
-              <li><a href="#rdown">Current release</a></li>
-              <li><a href="#devdown">Development version</a></li>
+              <li class="nav-item"><a class="nav-link" href="#rmanual">R manual pages</a></li>
             </ul>
           </li>
 
-          <li><a href="#help">
-	      <i class="icon-fixed-width icon-question-sign"></i> 
-	      Get help</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#downloads"><i class="fa fa-fw fa-download"></i> Downloads</a>
             <ul class="nav">
-              <li><a href="#list">Mailing list</a></li>
-              <li><a href="#so">Stack Overflow</a></li>
+              <li class="nav-item"><a class="nav-link" href="#rdown">Current release</a></li>
+              <li class="nav-item"><a class="nav-link" href="#devdown">Development version</a></li>
             </ul>
           </li>
 
-          <li><a href="#contribute">
-	      <i class="icon-fixed-width icon-plus-sign-alt"></i> 
-	      Contribute</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#help"><i class="fa fa-fw fa-question"></i> Get help</a>
             <ul class="nav">
-              <li><a href="#contributebugs">Report bugs</a></li>
-              <!-- <li><a href="#contributewiki">Improve the Wiki</a></li> -->
-              <li><a href="#contributecode">Contribute code</a></li>
+              <li class="nav-item"><a class="nav-link" href="#list">Mailing list</a></li>
+              <li class="nav-item"><a class="nav-link" href="#so">Stack Overflow</a></li>
             </ul>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="#contribute"><i class="fa fa-fw fa-plus"></i> Contribute</a>
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#contributebugs">Report bugs</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contributecode">Contribute code</a></li>
+            </ul>
+          </li>
         </ul>
-      </div>
+      </nav>
     </div>
 
     <div class="col-md-8">
@@ -172,9 +162,9 @@ library(igraph)
         </div>
 
         <h3><span id="rdown" class="anchor">&nbsp;</span>
-	  Latest stable version
-	  &ndash; {% include igraph-rversion %}
-	  </h3>
+    Latest stable version
+    &ndash; {% include igraph-rversion %}
+    </h3>
         <p>
           <small> Note: the simplest way to install the igraph R
             package is typing <code>install.packages("igraph")</code>
@@ -187,14 +177,14 @@ library(igraph)
             <li><i class="icon-li icon-apple"></i>
               <a href="https://cran.r-project.org/bin/macosx/el-capitan/contrib/3.6/igraph_{% include igraph-rversion %}.tgz">Mac OS X universal binary package</a></li>
             <li><i class="icon-li icon-file-text"></i>
-			  <a href="https://cran.r-project.org/src/contrib/igraph_{% include igraph-rversion %}.tar.gz">Source package</a></li>
+        <a href="https://cran.r-project.org/src/contrib/igraph_{% include igraph-rversion %}.tar.gz">Source package</a></li>
           </ul>
         </p>
 
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
         <p>
-		  Clone (or fork) the <code>dev</code> or <code>cran</code> branch from the
+      Clone (or fork) the <code>dev</code> or <code>cran</code> branch from the
           <a href="https://github.com/igraph/rigraph">rigraph git
             repository on github.</a>
         </p>
@@ -252,8 +242,8 @@ library(igraph)
         <p>Send a pull request on <a href="https://github.com/igraph/rigraph">
                 GitHub.</a> Please note that igraph can contain only
           code that is compatible with its GPL license. See
-	  <a href="https://github.com/igraph/rigraph/blob/dev/CONTRIBUTING.md">
-	    our guide</a> on contributions to the igraph R package at GitHub.
+    <a href="https://github.com/igraph/rigraph/blob/dev/CONTRIBUTING.md">
+      our guide</a> on contributions to the igraph R package at GitHub.
         </p>
 
       </div>
