Added installation instructions for Windows to website.

--- a/c/index.html
+++ b/c/index.html
@@ -14,12 +14,8 @@ lead: Install and start using the igraph library
             <a class="nav-link" href="#startc">Get started</a>
             <ul class="nav">
               <li class="nav-item"><a class="nav-link" href="#creq">Requirements</a></li>
-              <li class="nav-item"><a class="nav-link" href="#cinstall">Installation</a></li>
-              <li class="nav-item"><a class="nav-link" href="#cinstallosx">Installation on Mac OS X</a></li>
-              <li class="nav-item"><a class="nav-link" href="#cinstallcygwin">Installation on Windows under
-                Cygwin</a></li>
-              <li class="nav-item"><a class="nav-link" href="#cinstallmsvc">Installation using Microsoft
-                Visual C++<a></li>
+              <li class="nav-item"><a class="nav-link" href="#cinstall">Installation on Linux</a></li>
+              <li class="nav-item"><a class="nav-link" href="#cinstallwindows">Installation on Windows</a></li>
               <li class="nav-item"><a class="nav-link" href="#ctut">Tutorials</a></li>
             </ul>
           </li>
@@ -42,15 +38,15 @@ lead: Install and start using the igraph library
           <li class="nav-item">
             <a class="nav-link" href="#help">Get help</a>
             <ul class="nav">
-              <li class="nav-item"><a class="nav-link" href="#list">Mailing list</a></li>
+              <li class="nav-item"><a class="nav-link" href="#discourse">igraph support forum</a></li>
               <li class="nav-item"><a class="nav-link" href="#so">Stack Overflow</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contributebugs">Report bugs</a></li>              
             </ul>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="#contribute">Contribute</a>
             <ul class="nav">
-              <li class="nav-item"><a class="nav-link" href="#contributebugs">Report bugs</a></li>
               <li class="nav-item"><a class="nav-link" href="#contributecode">Contribute code</a></li>
             </ul>
           </li>
@@ -120,7 +116,7 @@ lead: Install and start using the igraph library
           simply install the <code>igraph</code> package.
         </p>
 
-        <h3><span id="cinstallcygwin" class="anchor">&nbsp;</span>
+        <h3><span id="cinstallwindows" class="anchor">&nbsp;</span>
           Installation on Windows</h3>
         <p>
           Preferably, you use the supplied binaries for Windows.
@@ -212,12 +208,14 @@ lead: Install and start using the igraph library
           <h1><span id="help" class="anchor">&nbsp;</span>Get help</h1>
         </div>
 
-        <h3><span id="list" class="anchor">&nbsp;</span>Discourse discussiong forum</h3>
+        <h3><span id="list" class="anchor">&nbsp;</span>igraph support forum</h3>
         <p>
           Post your question on the
           <a href="https://igraph.discourse.group">
-            igraph Discourse discussion forum
-          </a>.
+            igraph support forum
+          </a>. Make sure that you include the
+          <code>igraph</code> tag and that you include a reproducible
+          example, complete with code and data.
         </p>
 
         <h3><span id="so" class="anchor">&nbsp;</span>Stack Overflow</h3>
@@ -229,20 +227,20 @@ lead: Install and start using the igraph library
           example, complete with code and data.
         </p>
 
-        <div class="page-header">
-          <h1><span id="contribute" class="anchor">&nbsp;</span>Contribute</h1>
-        </div>
-
-        <p>
-          Your contribution is more than welcome!
-        </p>
-
         <h3><span id="contributebugs" class="anchor">&nbsp;</span>
           Report bugs</h3>
 
         <p>Report bugs or suggest new features or algorithms in the
           <a href="https://github.com/igraph/igraph/issues">
           GitHub issue tracker</a>.
+        </p>
+
+        <div class="page-header">
+          <h1><span id="contribute" class="anchor">&nbsp;</span>Contribute</h1>
+        </div>
+
+        <p>
+          Your contribution is more than welcome!
         </p>
 
         <!-- <h3><span id="contributewiki" class="anchor">&nbsp;</span> -->
