Simplified RubyGems requirements, added back macOS.

--- a/c/index.html
+++ b/c/index.html
@@ -15,6 +15,7 @@ lead: Install and start using the igraph library
             <ul class="nav">
               <li class="nav-item"><a class="nav-link" href="#creq">Requirements</a></li>
               <li class="nav-item"><a class="nav-link" href="#cinstall">Installation on Linux</a></li>
+              <li class="nav-item"><a class="nav-link" href="#cinstallosx">Installation on macOS</a></li>
               <li class="nav-item"><a class="nav-link" href="#cinstallwindows">Installation on Windows</a></li>
               <li class="nav-item"><a class="nav-link" href="#ctut">Tutorials</a></li>
             </ul>
@@ -109,7 +110,7 @@ lead: Install and start using the igraph library
         </p>
 
         <h3><span id="cinstallosx" class="anchor">&nbsp;</span>
-          Installation on Mac OS X</h3>
+          Installation on macOS</h3>
         <p>
           You can use the regular Linux way (as above), or
           if you have <a href="https://brew.sh/">Homebrew</a> or <a href="https://www.macports.org/">MacPorts</a>, then
