Edited website and installation instructions.

--- a/c/compilation-windows.html
+++ b/c/compilation-windows.html
@@ -8,7 +8,7 @@ lead: Compile using <code>msys2</code> or MSVC.
 
   <div id="readme">
 
-    <p>There are two ways to compile igraph on Windows. You can either build from the released source code, or you can
+    <p>There are two ways to compile <code>igraph</code> on Windows. You can either build from the released source code, or you can
       build from the <code>git</code> repository. Compiling from the released source code is sometimes easier, as it
       already provides a project file that can be used to compile with Microsoft Visual C++ (MSVC). Of course,
       compilation from the released source code is limited to released versions, while compilation from the
@@ -60,7 +60,7 @@ lead: Compile using <code>msys2</code> or MSVC.
     </ul>
     <p>The <code>mingw-w64-x86_64-toolchain</code> also includes the optional <a href="https://gmplib.org/"
         rel="nofollow">Gnu Multiple Precision</a> package <code>mingw-w64-x86_64-gmp</code>. This enables extended
-      functionality in igraph.</p>
+      functionality in <code>igraph</code>.</p>
     <p>You can install these packages by running the following command in an <code>msys2</code> terminal:</p>
     <pre><code>pacman -S autoconf automake bison flex libtool make mingw-w64-x86_64-toolchain mingw-w64-x86_64-libxml2 mingw-w64-x86_64-gmp git zip
 </code></pre>
@@ -99,7 +99,7 @@ make
     <h2><a id="user-content-preparing-the-msvc-project-file" class="anchor" 
         href="#preparing-the-msvc-project-file"></a>Preparing the MSVC project file</h2>
     <p>If you intend to compile with Microsoft Visual C++, you will need a project file for Microsoft Visual C++. This
-      can be done by following the above steps, except for the last step, you create the MSVC project file using</p>
+      can be done by following the above steps, except for the last step, and then creating the MSVC project file using</p>
     <pre><code>./configure
 make msvc
 </code></pre>
@@ -113,13 +113,13 @@ make msvc
         href="https://wiki.python.org/moin/WindowsCompilers" rel="nofollow">the Python website</a> for more details.</p>
     <p>The provided project file is still provided in an older MSVC format. To use it with more recent versions of MSVC,
       you will have to upgrade the project file. Note that this can only be done if you have the the full Microsoft
-      Visual Studio install. You can install the Community edition, which is <a
-        href="https://visualstudio.microsoft.com/downloads/" rel="nofollow">freely available</a>. The Build Tools that
+      Visual Studio installed. You can install the Community edition, which is <a
+        href="https://visualstudio.microsoft.com/downloads/" rel="nofollow">freely available</a>. The Microsoft Visual C++ Build Tools that
       are available do not allow you to upgrade the project file, which is necessary to be able to compile
       <code>igraph</code> correctly.</p>
-    <p>Compilation can be done in two ways. The easiest way for most users is probably simply to open the project
+    <p>Compilation can be done in two ways. The easiest way for most users is to open the project
       solution file (<code>igraph.sln</code>) in the Visual Studio IDE. It will ask you to convert it to the current
-      format, and you should be able to compile it, once that is done.</p>
+      format, and you should be able to compile it, once it is converted.</p>
     <p>Alternatively, you can compile via the command line. In that case, open the "Developer Command Prompt", and
       depending on your version of MSVC, you should do the following</p>
     <p>MSVC 9.0</p>
@@ -141,7 +141,7 @@ msbuild.exe igraph.vcxproj
     <p>before you include</p>
     <pre><code>#include "igraph.h"
 </code></pre>
-    <p>Alternatively, you can also reconfigure the MSVC project to compile a dynamic library (<code>.dll</code>), in
+    <p>Alternatively, you can reconfigure the MSVC project to compile a dynamic library (<code>.dll</code>), in
       which case the <code>IGRAPH_STATIC</code> definition should <em>not</em> be included.</p>
     <p>A small test project is included in the <code>igraphtest</code> subdirectory of the
       <code>igraph-[VERSION]-msvc</code> directory.</p>
