--- a/c/index.html
+++ b/c/index.html
@@ -214,8 +214,7 @@ lead: Install and start using the igraph library
           Post your question on the
           <a href="https://igraph.discourse.group">
             igraph support forum
-          </a>. Make sure that you include the
-          <code>igraph</code> tag and that you include a reproducible
+          </a>. Make sure that you include a minimal reproducible
           example, complete with code and data.
         </p>
 
@@ -224,7 +223,7 @@ lead: Install and start using the igraph library
           Post specific igraph questions on
           <a href="http://stackoverflow.com/questions/tagged/igraph">
             Stack Overflow</a>. Make sure that you include the
-          <code>igraph</code> tag and that you include a reproducible
+          <code>igraph</code> tag and that you include a minimal reproducible
           example, complete with code and data.
         </p>
 
