switched C core download links to Github

--- a/c/index.html
+++ b/c/index.html
@@ -187,9 +187,9 @@ make install
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-file-text"></i>
-              <a href="/nightly/get/c/igraph-{% include igraph-cversion %}.tar.gz">Source code</a></li>
+              <a href="https://github.com/igraph/igraph/releases/download/0.8.0/igraph-{% include igraph-cversion %}.tar.gz">Source code</a></li>
             <li><i class="icon-li icon-windows"></i>
-              <a href="/nightly/get/msvc/igraph-{% include igraph-cversion %}-msvc.zip">Source code for Microsoft Visual
+              <a href="https://github.com/igraph/igraph/releases/download/0.8.0/igraph-{% include igraph-cversion %}-msvc.zip">Source code for Microsoft Visual
               Studio</a></li>
           </ul>
         </p>
