updated python/index.html to refer to libxml2-dev and zlib1g-dev; closes igraph/python-igraph#118

--- a/python/index.html
+++ b/python/index.html
@@ -69,7 +69,10 @@ extramenu: <li><a href="/python"><i class="icon-python"></i> Get started</a></li
           compiler, the tool <code>make</code> and the development header files
           for your version of Python. On Debian and Ubuntu Linux the
           <code>build-essential</code> and <code>python-dev</code> packages install
-          these. On Mac OS X, you can get a working C and C++ compiler as well as
+		  these. You will also need <code>libxml2-dev</code> and <code>zlib1g-dev</code>
+		  for GraphML support.
+		</p>
+		<p>On Mac OS X, you can get a working C and C++ compiler as well as
           <code>make</code> by installing XCode or the XCode Command Line Tools.
         </p>
         <p>See also the platform-specific installation instructions below.</p>
