Included sidenav and corrected layout.

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -1,15 +1,41 @@
 ---
-layout: main
-title: igraph Code of Conduct
-leader: rules and regulations for the igraph community
+layout: default
+mainheader: igraph Code of Conduct
+lead: Rules and regulations for the igraph community
 ---
 
 <div class="container">
 
-  <div class="section" id="igraph-code-of-conduct">
-    <h1>igraph Code of Conduct</h1>
-    <div class="section" id="introduction">
-      <h2>Introduction</h2>
+
+  <div class="row">
+    <div class="col-md-3">
+      <nav class="bs-sidebar affix hidden-print" role="complementary">
+        <ul class="nav bs-sidenav">
+          <li class="nav-item">
+            <a class="nav-link" href="#introduction">Introduction</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#specific-guidelines">Specific Guidelines</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#reporting-guidelines">Reporting Guidelines</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#incident-reporting">Incident reporting</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#endnotes">Endnotes</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="col-md-8">
+      <div class="page-header">
+        <h1>igraph Code of Conduct</h1>
+      </div>
+      <h2><span id="introduction" class="anchor">&nbsp;</span>
+        Introduction</h2>
       <p>This code of conduct applies to all spaces managed by the igraph project,
         including all public and private mailing lists, issue trackers, wikis, blogs,
         Twitter, and any other communication channel used by our community. Any events related to our
@@ -22,9 +48,9 @@ leader: rules and regulations for the igraph community
         understanding of a collaborative, shared environment and goals. Please try to
         follow this code in spirit as much as in letter, to create a friendly and
         productive environment that enriches the surrounding community.</p>
-    </div>
-    <div class="section" id="specific-guidelines">
-      <h2>Specific guidelines
+
+      <h2><span id="specific-guidelines" class="anchor">&nbsp;</span>
+        Specific guidelines
       </h2>
       <p>We strive to:</p>
       <ol class="arabic simple">
@@ -98,9 +124,9 @@ leader: rules and regulations for the igraph community
           </ul>
         </li>
       </ol>
-    </div>
-    <div class="section" id="diversity-statement">
-      <h2>Diversity statement
+
+      <h2><span id="diversity-statement" class="anchor">&nbsp;</span>
+        Diversity statement
       </h2>
       <p>The igraph project welcomes and encourages participation by everyone. We are
         committed to being a community that everyone enjoys being part of. Although
@@ -117,9 +143,9 @@ leader: rules and regulations for the igraph community
       <p>Standards for behavior in the igraph community are detailed in the Code of
         Conduct above. Participants in our community should uphold these standards
         in all their interactions and help others to do so as well (see next section).</p>
-    </div>
-    <div class="section" id="reporting-guidelines">
-      <h2>Reporting guidelines</h2>
+
+      <h2><span id="reporting-guidelines" class="anchor">&nbsp;</span>
+        Reporting guidelines</h2>
       <p>We know that it is painfully common for internet communication to start at or
         devolve into obvious and flagrant abuse. We also recognize that sometimes
         people may have a bad day, or be unaware of some of the guidelines in this Code
@@ -151,11 +177,12 @@ leader: rules and regulations for the igraph community
       <p>If your report involves any of the above mentioned persons, or if they feel they have
         a conflict of interest in handling it, they will recuse themselves from
         considering your report. Alternatively, if, for any reason, you feel
-        uncomfortable making a report to the organisation directly, then you can also contact any of the above mentioned
+        uncomfortable making a report to the organisation directly, then you can also contact any of the above
+        mentioned
         persons individually.</p>
-    </div>
-    <div class="section" id="incident-reporting-resolution-code-of-conduct-enforcement">
-      <h2>Incident reporting
+
+      <h2><span id="incident-reporting" class="anchor">&nbsp;</span>
+        Incident reporting
       </h2>
       <p>We will investigate and respond to all complaints. The igraph
         organisation will protect the identity of the reporter, and treat the content of complaints as confidential
@@ -205,19 +232,15 @@ leader: rules and regulations for the igraph community
       </ol>
       <p>The organisation will respond to any report as soon as possible, and at most
         within 5 working days.</p>
-    </div>
-    <div class="section" id="endnotes">
-      <h2>Endnotes</h2>
-      <p>This Code of Conduct is inspired by</p>
-      <ul class="simple">
-        <li>
-          <p><a href="https://docs.scipy.org/doc/scipy/reference/dev/conduct/code_of_conduct.html">The SciPy Code of
-              Conduct</a></p>
-        </li>
-      </ul>
+
+      <h2><span id="endnotes" class="anchor">&nbsp;</span>
+        Endnotes</h2>
+      <p>This Code of Conduct is inspired by
+          <a href="https://docs.scipy.org/doc/scipy/reference/dev/conduct/code_of_conduct.html">The SciPy Code of
+              Conduct</a>.
+      </p>
       <p>The current organisation of the igraph community is rudimentary. A more professional organisation may develop
         in
         the future, at which point the procedure of handling indident reports will also be further formalized.</p>
     </div>
   </div>
-</div>
