Forgot to include diversity statement in navbar.

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -18,6 +18,9 @@ lead: Rules and regulations for the igraph community
             <a class="nav-link" href="#specific-guidelines">Specific Guidelines</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#diversity-statement">Diversity Statement</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#reporting-guidelines">Reporting Guidelines</a>
           </li>
           <li class="nav-item">
