fix a few broken links in the homepage, closes #20

--- a/r/index.html
+++ b/r/index.html
@@ -113,7 +113,7 @@ library(igraph)
 <!--             <li>Some screenshots and examples are -->
 <!--               <a href="">here.</a></li>           -->
             <li>Type in <code>demo(package="igraph")</code> 
-              (or use {% include rfun f="igraphdemo" %} if you have
+              (or use <a href="https://igraph.org/r/doc/igraph_demo.html">igraphdemo()</a> if you have
               <span style="white-space:nowrap;">
                 {% include rbasepkg p="tcltk" %})</span> to get a list of
               demos.</li>
@@ -173,9 +173,9 @@ library(igraph)
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-windows"></i>
-              <a href="https://cran.r-project.org/bin/windows/contrib/3.6/igraph_{% include igraph-rversion %}.zip">Windows binary package</a></li>
+              <a href="https://cran.r-project.org/bin/windows/contrib/r-release/igraph_{% include igraph-rversion %}.zip">Windows binary package</a></li>
             <li><i class="icon-li icon-apple"></i>
-              <a href="https://cran.r-project.org/bin/macosx/el-capitan/contrib/3.6/igraph_{% include igraph-rversion %}.tgz">Mac OS X universal binary package</a></li>
+              <a href="https://cran.r-project.org/bin/macosx/el-capitan/contrib/r-release/igraph_{% include igraph-rversion %}.tgz">Mac OS X universal binary package</a></li>
             <li><i class="icon-li icon-file-text"></i>
         <a href="https://cran.r-project.org/src/contrib/igraph_{% include igraph-rversion %}.tar.gz">Source package</a></li>
           </ul>
