limit animation to main pages only

--- a/c/compilation-windows.html
+++ b/c/compilation-windows.html
@@ -2,6 +2,7 @@
 layout: default
 mainheader: Compiling the igraph library in Windows
 lead: Compile using <code>msys2</code> or MSVC.
+animated_header: true
 ---
 
 <div class="container">
