--- a/python/index.html
+++ b/python/index.html
@@ -3,6 +3,7 @@ layout: default
 mainheader: Get started with python-igraph
 lead: Install and start using python-igraph
 extramenu: <li><a href="/python"><i class="icon-python"></i> Get started</a></li>
+animated_header: true
 ---
 
 <div class="container">
