--- a/r/index.html
+++ b/r/index.html
@@ -2,6 +2,7 @@
 layout: default
 mainheader: Get started with R igraph
 lead: Install and start using the igraph R package
+animated_header: true
 ---
 
 <div class="container">
