--- a/c/index.html
+++ b/c/index.html
@@ -2,6 +2,7 @@
 layout: default
 mainheader: Get started with the igraph library
 lead: Install and start using the igraph library
+animated_header: true
 ---
 
 <div class="container">
