--- a/c/index.html
+++ b/c/index.html
@@ -184,13 +184,13 @@ make install
         </div>
 
         <h3><span id="cdown" class="anchor">&nbsp;</span>Current release
-	  &ndash; version {% include igraph-cversion %}</h3>
+          &ndash; version {% include igraph-cversion %}</h3>
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-file-text"></i>
-              <a href="https://github.com/igraph/igraph/releases/download/0.8.0/igraph-{% include igraph-cversion %}.tar.gz">Source code</a></li>
+              <a href="https://github.com/igraph/igraph/releases/download/{% include igraph-cversion %}/igraph-{% include igraph-cversion %}.tar.gz">Source code</a></li>
             <li><i class="icon-li icon-windows"></i>
-              <a href="https://github.com/igraph/igraph/releases/download/0.8.0/igraph-{% include igraph-cversion %}-msvc.zip">Source code for Microsoft Visual
+              <a href="https://github.com/igraph/igraph/releases/download/%{ include igraph-cversion %}/igraph-{% include igraph-cversion %}-msvc.zip">Source code for Microsoft Visual
               Studio</a></li>
           </ul>
         </p>
@@ -253,10 +253,10 @@ make install
           Contribute code</h3>
 
         <p>Send a pull request on <a href="https://github.com/igraph/igraph">
-                GitHub.</a> Please note that igraph can contain only
+          GitHub.</a> Please note that igraph can contain only
           code that is compatible with its GPL license. See
-	  <a href="https://github.com/igraph/igraph/blob/master/CONTRIBUTING.md">
-	    our guide</a> on contributions to the igraph C library at GitHub.
+          <a href="https://github.com/igraph/igraph/blob/master/CONTRIBUTING.md">
+          our guide</a> on contributions to the igraph C library at GitHub.
         </p>
 
       </div>
